add missing includeconfig to GCP. add some readme clarifications

--- a/CloudPipeline/GCP/SRA_pipeline/rna_editing.config
+++ b/CloudPipeline/GCP/SRA_pipeline/rna_editing.config
@@ -1,3 +1,4 @@
+includeConfig './rna_editing.user_params.config'
 docker.enabled = true
 //param to be overide from the terminal with --run_title <deserved name>
 params.run_title = "undefined"
